Change ufo color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div id="projectile"></div>
-      <div id="ufo"></div>
+      <div id="ufo" class="icon"></div>
     </main>
     <button id="fire">Запуск</button>
   </body>
