--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main>
+      <canvas></canvas>
       <div id="projectile"></div>
       <div id="ufo" class="icon"></div>
     </main>
