Right canvas size and trajectory painter

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <main>
       <canvas></canvas>
-      <div id="projectile"></div>
-      <div id="ufo" class="icon"></div>
+      <div id="field">
+        <div id="projectile"></div>
+        <div id="ufo" class="icon"></div>
+      </div>
     </main>
     <button id="fire">Запуск</button>
   </body>
