Add controls for velocity, height and angle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <div id="ufo" class="icon"></div>
       </div>
     </main>
-    <button id="fire">Запуск</button>
+    <div id="controls">
+      <button id="fire">Запустить заряд</button>
+      <label for="velocity">Начальная скорость:</label>
+      <input type="text" name="velocity" placeholder="55" pattern="\d*">
+      <label for="height">Высота пушки:</label>
+      <input type="text" name="height" placeholder="15" pattern="\d*">
+      <label for="angle">Угол наклона:</label>
+      <input type="text" name="angle" placeholder="45" pattern="\d*">
+    </div>
   </body>
 </html>
