Upgrade ufo style

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
       <label for="angle">Угол наклона:</label>
       <input type="text" name="angle" placeholder="45" pattern="\d*">
     </div>
+    <div>
+      Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+    </div>
   </body>
 </html>
