Add controls functionality and upgade collision checker

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <input type="text" name="height" placeholder="15" pattern="\d*">
       <label for="angle">Угол наклона:</label>
       <input type="text" name="angle" placeholder="45" pattern="\d*">
+      <label id="ufoCoordinates"></label>
     </div>
     <div>
       Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
