Add reload button

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </main>
     <div id="controlsBlock">
       <div class="columnContent projectileConditions">
-        <h2>Частица:</h2>
+        <h2>Снаряд:</h2>
         <label>q = <span class="digit" id="q"></span> Кл</label>
         <br>
         <label>m = <span class="digit" id="m"></span> кг</label>
       </div>
       <div class="columnContent fieldConditions">
-        <h2>Поле:</h2>
+        <h2>Поля:</h2>
         <label>E = <span class="digit" id="E"></span> В/м</label>
         <br>
         <label>B = <span class="digit" id="B"></span> Тесла</label>
@@ -50,10 +50,11 @@
         <input type="text" name="angle" placeholder="45" pattern="\d*">
         <label> °</label>
       </div>
-      <button id="fire" data-ready="false">Запустить частицу</button>
+      <button id="fire" data-ready="false">Запустить снаряд</button>
     </div>
     <div>
       Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
     </div>
+    <button id="reload">Запустить ещё раз</button>
   </body>
 </html>
