Add animation for hide controls block

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <input type="text" name="angle" placeholder="45" pattern="\d*">
         <label>°</label>
       </div>
-      <button id="fire" data-ready="false">Запустить снаряд</button>
+      <button id="fire">Запустить снаряд</button>
     </div>
     <div id="startBlock" class="popup">
       <h2>Сбей тарелку!</h2>
