Add fields visualization

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <main>
+      <div id="electro">
+        <div class="electro"></div>
+      </div>
+      <div id="magnetic">
+        <div class="magnetic"></div>
+      </div>
       <canvas></canvas>
       <div id="field">
         <div id="projectile"></div>
@@ -22,6 +28,14 @@
         <label>q = <span class="digit" id="q"></span> Кл</label>
         <br>
         <label>m = <span class="digit" id="m"></span> кг</label>
+      </div>
+      <div class="columnContent maxValues">
+        <h2>Ограничения:</h2>
+        <label>V<sub>0</sub> = <span class="digit">60</span> м/с</label>
+        <br>
+        <label>H = <span class="digit">60</span> м</label>
+        <br>
+        <label>α = <span class="digit">90</span> °</label>
       </div>
       <div class="columnContent fieldConditions">
         <h2>Поля:</h2>
@@ -68,7 +82,7 @@
       <h2>Ты прошёл всё!</h2>
     </div>
     <div>
-      Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a>
+      Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank">Good Ware</a> and <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a>
     </div>
   </body>
 </html>
