Add ukrainian translation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" dir="ltr" data-theme="dark">
+<html lang="uk" dir="ltr" data-theme="dark">
   <head>
     <meta charset="utf-8">
     <title>physicGame</title>
@@ -30,7 +30,7 @@
         <label>m = <span class="digit" id="m"></span> кг</label>
       </div>
       <div class="columnContent maxValues">
-        <h2>Ограничения:</h2>
+        <h2>Обмеження:</h2>
         <label>V<sub>0</sub> = <span class="digit">60</span> м/с</label>
         <br>
         <label>H = <span class="digit">60</span> м</label>
@@ -44,7 +44,7 @@
         <label>B = <span class="digit" id="B"></span> Тесла</label>
       </div>
       <div class="columnContent ufoConditions">
-        <h2>Тарелка:</h2>
+        <h2>Тарілка:</h2>
         <label>x = <span class="digit" id="ufoX"></span> м</label>
         <br>
         <label>y = <span class="digit" id="ufoY"></span> м</label>
@@ -64,25 +64,28 @@
         <input type="text" name="angle" placeholder="45" pattern="\d*">
         <label>°</label>
       </div>
-      <button id="fire">Запустить снаряд</button>
+      <button id="fire">Запустити снаряд</button>
     </div>
     <div id="startBlock" class="popup">
-      <h2>Сбей тарелку!</h2>
-      <button id="start">Начать</button>
+      <h2>Збий тарілку!</h2>
+      <button id="start">Почати</button>
     </div>
     <div id="winBlock" class="popup">
-      <h2>Уровень пройден!</h2>
-      <button id="win">Дальше</button>
+      <h2>Задача вирішена!</h2>
+      <button id="win">Далі</button>
     </div>
     <div id="failBlock" class="popup">
-      <h2>Уровень провален!</h2>
+      <h2>Розв'язано не вірно!</h2>
       <button id="fail">Заново</button>
     </div>
     <div id="finishBlock" class="popup">
-      <h2>Ты прошёл всё!</h2>
+      <h2>Все розв'язано правильно!</h2>
     </div>
     <div>
       Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank">Good Ware</a> and <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a>
+    </div>
+    <div>
+      Made by <a href="https://github,com/lr0pb" title="LR0PB" target="_blank">LR0PB</a>
     </div>
   </body>
 </html>
