--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       <h2>Все розв'язано правильно!</h2>
     </div>
     <div>
-      Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank">Good Ware</a> and <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a>
-    </div>
-    <div>
-      Made by <a href="https://github,com/lr0pb" title="LR0PB" target="_blank">LR0PB</a>
+      Site made by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank">LR0PB</a>, &copy; 2020 —
+      Credits: icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank">Good Ware</a>
+      and <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a>
+      from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a>
     </div>
   </body>
 </html>
