--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     </div>
     <div id="finishBlock" class="popup">
       <h2>Все розв'язано правильно!</h2>
+      <button id="reload">Ще раз</button>
     </div>
     <div>
       Site made by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank">LR0PB</a>, &copy; 2020 —
