--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       Site made by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank">LR0PB</a>, &copy; 2020 —
       Credits: icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank">Good Ware</a>
       and <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a>
-      from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a> Test
+      from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a>
     </div>
   </body>
 </html>
