--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>physicGame</title>
     <script type="text/javascript">
-      if ('serviceWorker' in navigator) const serviceWorker = navigator.serviceWorker.register('./sw.js');
+      console.log('hm');
     </script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600,700,800&display=swap&subset=cyrillic">
     <link rel="stylesheet" href="style.css">
