Add update cache notification

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
     </div>
     <div id="finishBlock" class="popup">
       <h2>Все розв'язано правильно!</h2>
-      <button id="reload">Ще раз</button>
+      <button class="reload">Ще раз</button>
+    </div>
+    <div id="updateBlock" class="popup">
+      <h2>З'явилася нова версія!</h2>
+      <button class="reload">Оновитися</button>
     </div>
     <div>
       Site made by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank">LR0PB</a>, &copy; 2020 —
