--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="uk" dir="ltr" data-theme="dark">
   <head>
-    <meta charset="utf-8">
     <title>physicGame</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="icon" href="/favicon.svg">
+    <link rel="apple-touch-icon-precomposed" href="/favicon.svg">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
   </head>
@@ -86,7 +89,7 @@
       <button class="reload">Оновитися</button>
     </div>
     <div>
-      Site made by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank">LR0PB</a>, &copy; 2020 —
+      Work by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank">LR0PB</a> —
       Credits: icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank">Good Ware</a>
       and <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a>
       from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a>
