--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>physicGame</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="icon" href="/favicon.svg">
-    <link rel="apple-touch-icon-precomposed" href="/favicon.svg">
+    <link rel="icon" href="favicon.svg">
+    <link rel="apple-touch-icon-precomposed" href="favicon.svg">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
   </head>
