--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" href="favicon.svg">
     <link rel="apple-touch-icon-precomposed" href="favicon.svg">
+    <link rel="stylesheet" id="font">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
   </head>
