Add correct mobile version

--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
                   чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты."
          data-ua="Розрахуй початкові умови H, V<sub>0</sub> та кут α між напрямком V<sub>0</sub> та віссю Ох для запуска електричного заряду,
                   щоб він влучив у тарілку, при впливі на нього різноманітних полів. Запусти снаряд та перевір свої розрахунки.">
-        <!--Найди уравнения зависимости координат снаряда от времени и определи из них начальные условия запуска снаряда Н,
-        V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох. Запусти снаряд и проверь свои расчеты.-->
         Расчитай начальные условия H, V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох для запуска электрического заряда,
         чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.
       </p>
       <button id="start" data-text data-ru="Начать" data-ua="Почати">Начать</button>
+      <h3 id="rotate" data-text data-ru="Поверни устройство горизонтально!" data-ua="Поверни пристрій горизонтально!">Поверни устройство горизонтально!</h3>
     </div>
     <div id="controlsBlock" class="popup">
       <div class="columnContent projectileConditions">
@@ -126,14 +125,14 @@
       <h2 data-text data-ru="Появилась новая версия!" data-ua="З'явилася нова версія!">Появилась новая версия!</h2>
       <button class="reload" data-text data-ru="Обновиться" data-ua="Оновитись">Обновиться</button>
     </div>
-    <div>
+    <footer style="margin: 0.5rem 0;">
       Work by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank" rel="noreferrer">LR0PB</a> <span class="space">—</span>
       Credits: icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank" rel="noreferrer">Good Ware</a>,
       <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noreferrer">Eucalyp</a>,
       <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons" target="_blank" rel="noreferrer">Smashicons</a> and
       <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank" rel="noreferrer">Freepik</a>
       from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noreferrer"> www.flaticon.com</a> <span class="space">—</span>
-      Choose language: <span class="space lang ru">RU</span><span class="space lang ua">UA</span>
-    </div>
+      Choose language: <span class="space lang ru" tabindex="0" role="button">RU</span><span class="space lang ua" tabindex="0" role="button">UA</span>
+    </footer>
   </body>
 </html>
