Fix controls block position and add banner for small devices

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
         чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.
       </p>
       <button id="start" data-text data-ru="Начать" data-ua="Почати">Начать</button>
-      <h3 id="rotate" data-text data-ru="Поверни устройство горизонтально!" data-ua="Поверни пристрій горизонтально!">Поверни устройство горизонтально!</h3>
+      <h3 id="rotate" class="warning" data-text data-ru="Поверни устройство горизонтально!" data-ua="Поверни пристрій горизонтально!">Поверни устройство горизонтально!</h3>
     </div>
+    <h3 id="smallDevice" class="warning" data-text
+      data-ru="Воспользуйтесь устройством с экраном большего размера!"
+      data-ua="Скористуйтеся пристроєм із єкраном більшого розміру!">
+      Воспользуйтесь устройством с экраном большего размера!
+    </h3>
     <div id="controlsBlock" class="popup">
       <div class="columnContent projectileConditions">
         <h2>Снаряд:</h2>
