Fix bugs and add manifest

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" href="favicon.svg">
-    <link rel="apple-touch-icon-precomposed" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600,700,800&display=swap&subset=cyrillic">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <link rel="stylesheet" id="font">
+    <link rel="manifest" href="manifest.json">
   </head>
   <body>
     <main>
@@ -130,7 +131,7 @@
       <h2 data-text data-ru="Появилась новая версия!" data-ua="З'явилася нова версія!">Появилась новая версия!</h2>
       <button class="reload" data-text data-ru="Обновиться" data-ua="Оновитись">Обновиться</button>
     </div>
-    <footer style="margin: 0.5rem 0;">
+    <footer>
       Work by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank" rel="noreferrer">LR0PB</a> <span class="space">—</span>
       Credits: icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank" rel="noreferrer">Good Ware</a>,
       <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noreferrer">Eucalyp</a>,
