--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>physicGame</title>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#171f36">
+    <meta name="theme-color" content="#1d2130">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" href="favicon.svg">
     <link rel="apple-touch-icon" href="favicon.svg">
