Add confetti on finish screen

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </main>
     <div id="startBlock" class="popup">
       <div class="coverBox">
-        <div id="light"></div>
-        <div id="cover"></div>
+        <div class="light"></div>
+        <div class="cover"></div>
       </div>
       <h1 data-text data-ru="Попади в тарелку!" data-ua="Влуч у тарілку!">Попади в тарелку!</h1>
       <p class="startText" data-text
@@ -125,12 +125,17 @@
       <button id="fail" data-text data-ru="Заново" data-ua="Заново">Заново</button>
     </div>
     <div id="finishBlock" class="popup">
+      <div id="confettiContainer"></div>
+      <div class="coverBox">
+        <div class="light"></div>
+        <div class="cover"></div>
+      </div>
       <h2 data-text data-ru="Всё решено правильно!" data-ua="Все розв'язано правильно!">Всё решено правильно!</h2>
-      <button class="reload" data-text data-ru="Ещё раз" data-ua="Ще раз">Ещё раз</button>
+      <button class="reload" data-text data-ru="Ещё раз?" data-ua="Ще раз?">Ещё раз?</button>
     </div>
     <div id="updateBlock" class="popup">
       <h2 data-text data-ru="Появилась новая версия!" data-ua="З'явилася нова версія!">Появилась новая версия!</h2>
-      <button class="reload" data-text data-ru="Обновиться" data-ua="Оновитись">Обновиться</button>
+      <button class="reload" data-text data-ru="Обновить" data-ua="Оновити">Обновить</button>
     </div>
     <footer>
       Work by <a href="https://github.com/lr0pb" title="LR0PB" target="_blank" rel="noreferrer">LR0PB</a> <span class="space">—</span>
