Upgrade confetti factory and fix start block display in mobile version

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                   чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты."
          data-ua="Розрахуй початкові умови H, V<sub>0</sub> та кут α між напрямком V<sub>0</sub> та віссю Ох для запуска електричного заряду,
                   щоб він влучив у тарілку, при впливі на нього різноманітних полів. Запусти снаряд та перевір свої розрахунки.">
+        <!--Найди уравнения зависимости координат снаряда от времени и определи из них начальные условия запуска снаряда Н,
+        V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох. Запусти снаряд и проверь свои расчеты.-->
         Расчитай начальные условия H, V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох для запуска электрического заряда,
         чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.
       </p>
@@ -124,8 +126,9 @@
       <h2 data-text data-ru="Решено не верно!" data-ua="Розв'язано не вірно!">Решено не верно!</h2>
       <button id="fail" data-text data-ru="Заново" data-ua="Заново">Заново</button>
     </div>
+    <div id="confettiContainer"></div>
     <div id="finishBlock" class="popup">
-      <div id="confettiContainer"></div>
+
       <div class="coverBox">
         <div class="light"></div>
         <div class="cover"></div>
