Add description, change icons sizes and names

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#1d2130">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="icon" href="favicon.svg">
-    <link rel="apple-touch-icon" href="favicon.svg">
+    <meta name="description" content="Попади в тарелку! Расчитай начальные условия H, V0 и угол α между направлением V0 и осью Ох для запуска электрического заряда,
+    чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.">
+    <link rel="icon" href="icon192x192.svg">
+    <link rel="apple-touch-icon" href="icon512x512.svg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600,700,800&display=swap&subset=cyrillic">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
@@ -39,8 +41,6 @@
                   чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты."
          data-ua="Розрахуй початкові умови H, V<sub>0</sub> та кут α між напрямком V<sub>0</sub> та віссю Ох для запуска електричного заряду,
                   щоб він влучив у тарілку, при впливі на нього різноманітних полів. Запусти снаряд та перевір свої розрахунки.">
-        <!--Найди уравнения зависимости координат снаряда от времени и определи из них начальные условия запуска снаряда Н,
-        V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох. Запусти снаряд и проверь свои расчеты.-->
         Расчитай начальные условия H, V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох для запуска электрического заряда,
         чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.
       </p>
